# datania

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
datania/: hipotecas.py  ipc.py
datania/aemet/: daily_weather.py  stations.py
datasets/datos_meteorologicos_estaciones_aemet/: README.md
datasets/hipotecas/: README.md  datapackage.yaml
datasets/ipc/: README.md  datapackage.yaml
web/: index.html
