[project]
name = "datania"
version = "0.0.0"
description = "Datania es una plataforma de datos abiertos colaborativa con el objetivo de unificar y armonizar información de diversas fuentes a nivel de España"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.32.6",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.13", "ty>=0.0.1a9"]

[build-system]
requires = ["uv_build>=0.7.12,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "datania"
module-root = ""
